Retornando ao commit anterior

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 <body>
 	<h1>Projeto do Jhonatan Schemeling</h1>
 	<h2>Primeira alteração</h2>
+
+	<h3>Segunda alteração, testando branch's</h3>
+
+	<h4>Editando</h4>
+
 	<button>Salvar</button>
+
 </body>
 </html>
