--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<h1>Projeto do Jhonatan Schemeling</h1>
 	<h2>Primeira alteração</h2>
 
-	<h3>Segunda alteração, testando branch's</h3>
+	<h3>Segunda alteração, testando branchs</h3>
 
 	<h4>Editando</h4>
 
