--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 	<link rel="stylesheet" href="estilo.css">
 </head>
+<title>Titulo da pagina</title>
 <body>
 	<h1>Projeto do Jhonatan Schemeling</h1>
 	<h2>Primeira alteração</h2>
