--- a/index.html
+++ b/index.html
@@ -1,17 +1,6 @@
-<html>
-<head>
-	<link rel="stylesheet" href="estilo.css">
-</head>
-<title>Titulo da pagina</title>
-<body>
-	<h1>Projeto do Jhonatan Schemeling</h1>
-	<h2>Primeira alteração</h2>
+<meta charset="utf-8">
+<script>
+	
+	alert("Alerta");
 
-	<h3>Segunda alteração, testando branchs</h3>
-
-	<h4>Editando</h4>
-
-	<button>Salvar</button>
-
-</body>
-</html>
+</script>
