--- a/CursoLogicaProgramacao/principal.html
+++ b/CursoLogicaProgramacao/principal.html
@@ -1,1 +1,28 @@
-<meta>
+<meta charset="UTF-8">
+
+
+<script>
+	//Mensagem de alerta
+	alert("Mensagem de alerta.");
+</script>
+
+<h2>Imprimindo uma linha com o comando document.write:</h2>
+
+<script>
+
+	//Comando para imprimir uma linha
+	document.write("Linha impressa com sucesso.<br><br>");
+
+</script>
+
+<h2>Realizanco operações aritméticas:</h2>
+
+<script>
+	
+	//Pode ser realizado ações aritméticas:
+	document.write("2 mais 2 = "+ (2+2) + ".<br>");
+	document.write("2 menos 2 = "+ (2-2) + ".<br>");
+	document.write("2 dividido por 2 = "+ (2/2) + ".<br>");
+	document.write("2 vezes 2 = "+ (2*2) + ".<br>");
+
+</script>
