Exercício de consumo de combustível

--- a/CursoLogicaProgramacao/principal.html
+++ b/CursoLogicaProgramacao/principal.html
@@ -26,3 +26,14 @@
 	document.write("2 vezes 2 = "+ (2*2) + ".<br>");
 
 </script>
+
+<h2>Utilizando variáveis:</h2>
+
+<script>
+	
+var idade = 23;
+document.write("Eu tenho "+idade + " anos.<br>");
+
+</script>
+
+<h2></h2>
