Utilizando uma funcao que recebe parametros

--- a/CursoLogicaProgramacao/comando_function.html
+++ b/CursoLogicaProgramacao/comando_function.html
@@ -8,6 +8,15 @@ function pulaLinha(){
 
 document.write("primeira linha");
 pulaLinha();
-document.write("segunda linha");S
+document.write("segunda linha");
+
+document.write("<h2>Utilizando uma funçao para substituir o document.write:</h2>");
+
+function mostra(mensagem){
+document.write(mensagem);
+}
+
+mostra("Utilizando a funçao mostra.<br>");
 
 </script>
+
